# co2monitor

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: main.yaml
assets/: connections.fzz
docs/: arch.puml
generators/: task_config_generator.py
main/: CMakeLists.txt  Kconfig  battery.c  battery.h  display.c  display.h  http.c  http.h  main.c  main.h  sensor.c  sensor.h  tasks.yaml  tasks_config.h  wifi.c  wifi.h  winsen_mh_z19.c  winsen_mh_z19.h
patch/: lvgl.patch  st7789.patch
